# bct-project-smart-auc

./: README.md  app.py  cmd.yaml  data.json  ds.py  pyproject.toml
templates/: index.html  trans.html  user_page.html
